# songbook-generator

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONVENTIONS.md  COPILOT.md  README.md  cleanup-preview-resources.sh  config.py  cover.py  deploy-gcs.sh  export-env.sh  gdrive.py  index.html  main.py  pdf.py  pyproject.toml  spike_gemini_duration.py  spike_gemini_year.py  spike_musicbrainz.py  styles.css  tabdb.csv  test_toc.py  toc.py
.claude/: settings.local.json
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: compute-changelog.py  generate-latest-json.py  get-edition-publish-vars.py  test_compute_changelog.py  upload-manifest-and-latest.py
.github/workflows/: api.yaml  cleanup-preview-envs.yaml  complete-songbook-cronjob.yaml  copilot-setup-steps.yml  deploy-gcs.yaml  deploy-gh-pages.yaml  deploy.yaml  export-tags.yaml  force_sync.yaml  generate-songbook.yaml  generate-songbooks.yaml  generator.yaml  janitor.yaml  monopolele-songbook-cronjob.yaml  preview-retag.yaml  regenerate-on-config-change.yaml  schedule.yaml  test.yaml  test.yml  trigger_sync.yaml  trigger_tagupdater.yaml  tuesday-songbook-cronjob.yaml  ui.yaml
api/: main.py  test_tracing.py  tracing.py
common/: test_tracing.py  tracing.py
deploy/: gcs-bucket-lifecycle.json
docs/: folder-components.md  pdf-validation.md  reading-song-metadata-from-firestore.md
docs/spikes/: 151-event-driven-change-detection.md  281-firestore-metadata-evaluation.md  281-metadata-storage-analysis.md  283-drive-folder-editions.md  307-technical-debt.md  317-section-based-songbook-yaml.md  323-google-login-ui.md  README.md  cost-savings-2026-03-01-to-2026-06-30.md
generator/: changelog.py  cli.py  config.toml  cover.py  debug.py  filters.py  gdrive.py  main.py  pdf.py  progress.py  test_changelog.py  test_cli.py  test_cover.py  test_gdrive.py  test_pdf.py  test_progress.py  test_toc.py  test_toc_parse.py  test_validation.py  toc.py  toc_parse.py  validation.py
generator/api/: main.py  test_main.py
generator/cache_updater/: main.py  sync.py  test_main.py  test_sync.py
generator/caching/: localstorage.py  test_localstorage.py
generator/cli/: __init__.py  cache.py  (+17 more)
infra/: artifact-registry-cleanup-policy.json
merger/: main.py
notebooks/: README.md  difficulty_binning_analysis.ipynb
scripts/: _drive_activity.py  analyse_dates.py  backfill_dates.py  create_pptx_template.py  drive_debug_info.py  drive_write_test.py  generate_manifest.py  list_drive_files.py  migrate_metadata.py  repair_ready_to_play_dates.py  resolve_drive_file.py  sync_cache_metadata.py  test_repair_ready_to_play_dates.py  test_validate_pdf.py  validate_pdf.py  verify_edition.py
tests/: test_toc.py
ui/: index.html  styles.css
(+133 files in other folders)
