[project]
name = "songbook-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeremie Jost", email = "jeremiejost@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.2.1",
    "fsspec>=2025.5.1",
    "functions-framework>=3.8.3",
    "gcsfs>=2025.5.1",
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-pubsub>=2.30.0",
    "pymupdf>=1.26.1",
    "toml>=0.10.2",
]

[project.scripts]
songbook-generator = "songbook_generator:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
